realizei mais alguns exercícios

--- a/exe007/index.html
+++ b/exe007/index.html
@@ -8,8 +8,8 @@
 </head>
 <body class="bg-dark text-center">
 <main>
-    <h1 class="text-white">Exe006</h1>
-    <input type="button" value="Executar Exercício" onclick="calcularAntecessorSucessor()">
+    <h1 class="text-white">Exe007</h1>
+    <input type="button" value="Executar Exercício" onclick="calcularDobroTercaParte()">
 </main>    
 </body>
 <script src="script.js"></script>
