--- a/exe015/index.html
+++ b/exe015/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>Exe010
+    <title>Exe015
       
     </title>
     <link
@@ -23,23 +23,23 @@
   </head>
   <body class="bg-dark">
     <main>
-      <h1 class="text-white text-center">Exe010</h1>
+      <h1 class="text-white text-center">Exe015</h1>
       <div class="container bg-white corpo  p-2 rounded">
-        <h4 class="text-center pb-2">Aluguel de Carro</h4>
+        <h4 class="text-center pb-2">Salário do Funcionário no Mês</h4>
         <p>
           
-            <label for="valorEmMetros">Metros: </label>
+            <label for="diasTrabalhados">Dias trabalhados: </label>
             <input
               type="number"
-              name="valorEmMetros"
-              id="valorEmMetros"
+              name="diasTrabalhados"
+              id="diasTrabalhados"
               class="btn bg-dark text-white"
             />
           <input
           type="button"
-          value="Converter"
+          value="Calcular Salário"
           class="btn bg-dark text-white"
-          onclick="converterMedidas()"
+          onclick="mostrarResultadoNaTela()"
           id="calcularResultado"
                 />
         </p>
