--- a/exe018/index.html
+++ b/exe018/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>Exe010
+    <title>Exe018
       
     </title>
     <link
@@ -23,21 +23,21 @@
   </head>
   <body class="bg-dark">
     <main>
-      <h1 class="text-white text-center">Exe010</h1>
+      <h1 class="text-white text-center">Exe018</h1>
       <div class="container bg-white corpo  p-2 rounded">
-        <h4 class="text-center pb-2">Aluguel de Carro</h4>
+        <h4 class="text-center pb-2">Você pode votar?</h4>
         <p>
           
-            <label for="valorEmMetros">Metros: </label>
+            <label for="anoDeNascimento">Ano de Nascimento: </label>
             <input
               type="number"
-              name="valorEmMetros"
-              id="valorEmMetros"
+              name="anoDeNascimento"
+              id="anoDeNascimento"
               class="btn bg-dark text-white"
             />
           <input
           type="button"
-          value="Converter"
+          value="Conferir"
           class="btn bg-dark text-white"
           onclick="mostrarResultadoNaTela()"
           id="calcularResultado"
