--- a/exe028/index.html
+++ b/exe028/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>Exe0</title>
+    <title>Exe028</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,20 +21,29 @@
   </head>
   <body class="bg-dark">
     <main>
-      <h1 class="text-white text-center">Exe0</h1>
+      <h1 class="text-white text-center">Exe028</h1>
       <div class="container bg-white corpo p-2 rounded">
-        <h4 class="text-center pb-2"></h4>
+        <h4 class="text-center pb-2">Classificação de terreno</h4>
         <p>
-          <label for=""></label>
+          <label for="valorLargura">Informe a largura: </label>
           <input
             type="number"
-            name=""
-            id=""
+            name="valorLargura"
+            id="valorLargura"
+            class="btn bg-dark text-white"
+          />
+        </p>
+        <p>
+          <label for="valorComprimento">Informe o comprimento: </label>
+          <input
+            type="number"
+            name="valorComprimento"
+            id="valorComprimento"
             class="btn bg-dark text-white"
           />
           <input
             type="button"
-            value=""
+            value="Analisar"
             class="btn bg-dark text-white"
             onclick="mostrarResultadoNaTela()"
             id="calcularResultado"
@@ -42,7 +51,7 @@
         </p>
         <div>
           <div
-            class="justify-content-center d-flex bg-dark rounded text-white w-100 m-auto p-2"
+            class="justify-content-center bg-dark rounded text-white w-100 m-auto p-2"
             id="telaDeResultado"
           >
             Resultado aqui...
