--- a/exe029/index.html
+++ b/exe029/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>Exe0</title>
+    <title>Exe029</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,28 +21,49 @@
   </head>
   <body class="bg-dark">
     <main>
-      <h1 class="text-white text-center">Exe0</h1>
+      <h1 class="text-white text-center">Exe029</h1>
       <div class="container bg-white corpo p-2 rounded">
-        <h4 class="text-center pb-2"></h4>
+        <h4 class="text-center pb-2">Reajuste de Salário</h4>
         <p>
-          <label for=""></label>
+          <label for="nomeFuncionario">Nome do Funcionário: </label>
           <input
-            type="number"
-            name=""
-            id=""
+            type="text"
+            name="nomeFuncionario"
+            id="nomeFuncionario"
             class="btn bg-dark text-white"
           />
+        </p>
+        <p>
+          <label for="salarioAtual">Salário Atual do Funcionário: </label>
+          <input
+            type="number"
+            name="salarioAtual"
+            id="salarioAtual"
+            class="btn bg-dark text-white"
+          />
+        </p>
+        <p>
+          <label for="tempoNaEmpresa">Quantos anos trabalha na empresa: </label>
+          <input
+            type="number"
+            name="tempoNaEmpresa"
+            id="tempoNaEmpresa"
+            class="btn bg-dark text-white"
+          />
+        </p>
+        <p>
           <input
             type="button"
-            value=""
+            value="Analisar"
             class="btn bg-dark text-white"
             onclick="mostrarResultadoNaTela()"
             id="calcularResultado"
           />
         </p>
+
         <div>
           <div
-            class="justify-content-center d-flex bg-dark rounded text-white w-100 m-auto p-2"
+            class="justify-content-center bg-dark rounded text-white w-100 m-auto p-2"
             id="telaDeResultado"
           >
             Resultado aqui...
