--- a/exe026/index.html
+++ b/exe026/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>Exe0</title>
+    <title>Exe026</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,20 +21,30 @@
   </head>
   <body class="bg-dark">
     <main>
-      <h1 class="text-white text-center">Exe0</h1>
+      <h1 class="text-white text-center">Exe026</h1>
       <div class="container bg-white corpo p-2 rounded">
-        <h4 class="text-center pb-2"></h4>
+        <h4 class="text-center pb-2">Qual é o maior valor?</h4>
         <p>
-          <label for=""></label>
+          <label for="primeiroValor">Primeiro Valor: </label>
           <input
             type="number"
-            name=""
-            id=""
+            name="primeiroValor"
+            id="primeiroValor"
             class="btn bg-dark text-white"
           />
+        </p>
+        <p>
+          <label for="segundoValor">Segundo Valor:</label>
+          <input
+            type="number"
+            name="segundoValor"
+            id="segundoValor"
+            class="btn bg-dark text-white"
+          />
+
           <input
             type="button"
-            value=""
+            value="Analisar"
             class="btn bg-dark text-white"
             onclick="mostrarResultadoNaTela()"
             id="calcularResultado"
