--- a/exe030/index.html
+++ b/exe030/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>Exe0</title>
+    <title>Exe030</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,28 +21,50 @@
   </head>
   <body class="bg-dark">
     <main>
-      <h1 class="text-white text-center">Exe0</h1>
+      <h1 class="text-white text-center">Exe030</h1>
       <div class="container bg-white corpo p-2 rounded">
-        <h4 class="text-center pb-2"></h4>
+        <h4 class="text-center pb-2">Analisador de Triângulos:</h4>
         <p>
-          <label for=""></label>
+          <label for="primeiroSegmento">Medida do primeiro segmento: </label>
           <input
             type="number"
-            name=""
-            id=""
+            name="primeiroSegmento"
+            id="primeiroSegmento"
             class="btn bg-dark text-white"
           />
+        </p>
+        <p>
+          <label for="segundoSegmento">Medida do segundo segmento: </label>
+          <input
+            type="number"
+            name="segundoSegmento"
+            id="segundoSegmento"
+            class="btn bg-dark text-white"
+          />
+        </p>
+
+        <p>
+          <label for="terceiroSegmento">Medida do terceiro segmento: </label>
+          <input
+            type="number"
+            name="terceiroSegmento"
+            id="terceiroSegmento"
+            class="btn bg-dark text-white"
+          />
+        </p>
+        <p>
           <input
             type="button"
-            value=""
+            value="Analisar"
             class="btn bg-dark text-white"
             onclick="mostrarResultadoNaTela()"
             id="calcularResultado"
           />
         </p>
+
         <div>
           <div
-            class="justify-content-center d-flex bg-dark rounded text-white w-100 m-auto p-2"
+            class="justify-content-center bg-dark rounded text-white w-100 m-auto p-2"
             id="telaDeResultado"
           >
             Resultado aqui...
