--- a/exe052/index.html
+++ b/exe052/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>Exe051</title>
+    <title>Exe052</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,9 +21,9 @@
   </head>
   <body class="bg-dark">
     <main>
-      <h1 class="text-white text-center">Exe051</h1>
+      <h1 class="text-white text-center">Exe052</h1>
       <div class="container bg-white corpo p-2 rounded">
-        <h4 class="text-center pb-2">Analisador de Preco</h4>
+        <h4 class="text-center pb-2">Analisador de Pessoas</h4>
         <p class="text-center">
           <input
             type="button"
